# attestation-agent

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.sh  sdk_for_eaa.patch
app/: Cargo.toml  build.rs
app/src/: kbc_manager.rs  main.rs
app/src/grpc/grpc_keyprovider/: keyprovider_structs.rs
app/src/kbc_modules/: mod.rs
app/src/kbc_modules/eaa_kbc/enclave_tls/: ffi.rs
app/src/kbc_modules/eaa_sgx_kbc/: mod.rs
docs/: IMPLEMENTATION.md
enclave/: Cargo.toml  Enclave.edl  build.rs
enclave/src/: foreign_types_sgx.rs  lib.rs  protocol.rs  string_error_sgx.rs
enclave/src/enclave_tls/: ffi.rs  mod.rs
sample_kbs/src/: sample_kbs.rs
sample_kbs/src/lib/: messages_grpc.rs
src/: kbc_manager.rs  main.rs
src/grpc/: mod.rs
src/grpc/grpc_keyprovider/: .gitignore  mod.rs
src/kbc_modules/: mod.rs  sample_kbc.rs
src/kbc_modules/eaa_kbc/: mod.rs  protocol.rs
src/kbc_modules/eaa_kbc/enclave_tls/: mod.rs
