[package]
name = "attestation-agent"
version = "0.0.1"
authors = ["Jiale Zhang <zhangjiale@linux.alibaba.com>"]
publish = false
edition = "2018"

[dependencies]
grpcio = { version = "0.6.0", optional = true }
protobuf = "~2"
futures = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.9.2"
base64 = "0.13.0"
lazy_static = "1.4.0"
string-error = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protoc-grpcio = { version = "3.0.0", optional = true }

[features]
default = ["grpc"]
grpc = ["protoc-grpcio", "grpcio"]
ttrpc = []