[package]
name = "app"
version = "0.0.1"
authors = ["Jiale Zhang <zhangjiale@linux.alibaba.com>"]
publish = false
edition = "2018"
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
grpcio = { version = "0.6.0", optional = true }
protobuf = "~2"
futures = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.9.2"
base64 = "0.13.0"
lazy_static = "1.4.0"
string-error = "0.1.0"
foreign-types = "0.5.0"

[build-dependencies]
protoc-grpcio = { version = "3.0.0", optional = true }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_urts = { path = "../incubator-teaclave-sgx-sdk/sgx_urts" }

[features]
default = ["sample_kbc", "grpc", "eaa_sgx_kbc"]
grpc = ["protoc-grpcio", "grpcio"]
ttrpc = []
sample_kbc = []
eaa_sgx_kbc = []

